# SentimentalBB

./: .dvcignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Setup.md  SpecDoc.md  app.py  data.dvc  models.dvc  pyproject.toml  pytorch_model.ipynb  requirements.txt  results.csv  setup.py
.42AI/: get_dataset_script1.sh  init.sh  pre-commit.git  test_environment.py
.dvc/: config
.github/ISSUE_TEMPLATE/: 42AI_dev.md  42AI_issue.md  42AI_user_feature.md
.github/PULL_REQUEST_TEMPLATE/: 42AI_pull_request.md
.github/workflows/: cicd.yaml  issue_triage.yaml  tests.yaml
data/: .gitignore  external.dvc  interim.dvc  processed.dvc  raw.dvc
docs/: .gitignore  Makefile  _config.yml  index.md  index.rst  make.bat
docs/_layouts/: default.html
docs/reports/: .template_report.md  reports.md
documentation/: conf.py  sbb_paper.md
notebooks/: 02-at-Preprocess-and-fit-model-aclImdb.ipynb  Make_Dataset_twitter_predict.ipynb  Make_dataset_train_allocine.ipynb  Make_dataset_twitter_test.ipynb  Test_to_delete.ipynb  camemBERT.ipynb  dataframe.ipynb  first_tweet.ipynb  format_csv.ipynb  hashtags.ipynb  naive_bayes_twitter.ipynb  twitter_xlm_roberta_base_sentiment.ipynb
references/: bibliography.md
scripts/: all_predict.sh  download_dataset.sh  get_dataset_script1.sh  get_tweets.sh  get_tweets_candidates.sh  get_tweets_hashtags.sh  predict_huggingface.sh  predict_naive_bayes.sh  setup_test_aclImdb.sh  setup_test_allocine_naive_bayes.sh  update_website.sh
src/: __main__.py  config.py
src/configs/: config.yaml
src/data/: main.py  (+1 more)
(+46 files in other folders)
